src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>C501_Org_BulkPrinting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C501_Org_BulkPrinting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Org_Language_English__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C501_Org_Language_English</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Org_Language_Other__c</fullName>
        <label>C501_Org_Language_Other</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Org_Language_Russian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C501_Org_Language_Russian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Org_Language_Spanish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C501_Org_Language_Spanish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Org_Language_Vietnamese__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C501_Org_Language_Vietnamese</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Org_SizeOther__c</fullName>
        <label>C501_Org_SizeOther</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Org_Size__c</fullName>
        <label>C501_Org_Size</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Organization_Reach_English__c</fullName>
        <label>C501 Organization Reach English</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select an option</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>Town</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>Regional Rural Area</fullName>
                </value>
                <value>
                    <fullName>Regional Suburban Area</fullName>
                </value>
                <value>
                    <fullName>Reservation or Territory</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Multi-State</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Organization_Reach_Spanish__c</fullName>
        <label>C501 Organization Reach Spanish</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elige una de las siguientes opciones</fullName>
                </value>
                <value>
                    <fullName>El barrio</fullName>
                </value>
                <value>
                    <fullName>El pueblo</fullName>
                </value>
                <value>
                    <fullName>La ciudad</fullName>
                </value>
                <value>
                    <fullName>El condado</fullName>
                </value>
                <value>
                    <fullName>El área regional rural</fullName>
                </value>
                <value>
                    <fullName>El área regional suburbano</fullName>
                </value>
                <value>
                    <fullName>El territorio o la reservación</fullName>
                </value>
                <value>
                    <fullName>El estado</fullName>
                </value>
                <value>
                    <fullName>Múltiples estados</fullName>
                </value>
                <value>
                    <fullName>El país</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Organization_Reach__c</fullName>
        <label>C501 Organization Reach</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_VFW_Org_Name__c</fullName>
        <label>C501_VFW_Org_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_VFW_Email__c</fullName>
        <label>C501_VFW_Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_VFW_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>C501 Visual Form Wizard Managed Field</description>
        <label>C501_VFW_Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_VFW_Name__c</fullName>
        <label>C501_VFW_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_VFW_Zipcode__c</fullName>
        <label>C501_VFW_Zipcode</label>
        <length>32</length>
        <type>Text</type>
    </fields>    
</CustomObject>